# prime-find

./: Cargo.toml  README.md
src/: fermat.rs  lib.rs  millerrabin.rs  solovaystrassen.rs  trial.rs
