[package]
name = "prime-find"
version = "0.1.0"
authors = ["Stuxnot <41650734+Stuxnot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
